src/test/compile-fail/fail-simple.rs
// -*- rust -*-

// error-pattern:unexpected token
fn main() {
  fail @ ;
}
